# easy-lessons-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.cursor/rules/: conventions.mdc
.github/workflows/: ci.yml  release.yml  version-bump.yml
app/: main.py
bot/: handlers.py  media_handlers.py
core/: audio_handler.py  bot_instance.py  context_matcher.py  context_processor.py  di_container.py  error_messages.py  graceful_degradation.py  image_analyzer.py  image_processor.py  llm_client.py  logging_config.py  media_processor.py  message_processor.py  prompt_store.py  service_registry.py  session_state.py  version_info.py
core/context/: __init__.py  context_analyzer.py
core/dialog/: __init__.py  dialog_builder.py
core/formatting/: __init__.py  educational_templates.py  math_converter.py  telegram_formatter.py
core/multimedia_prompts/: audio_analysis.txt  context_matching.txt  image_analysis.txt
core/persistence/: __init__.py  database.py  models.py  repositories.py  session_adapter.py
core/persistence/migrations/: __init__.py  manager.py
core/persistence/migrations/versions/: 001_initial_schema.py  002_add_media_support.py  003_add_image_analysis_fields.py
core/prompts/: __init__.py  prompt_loader.py  system_base.txt  system_explanation.txt  system_question.txt  topic_identification.txt  understanding_high.txt  understanding_low.txt  understanding_medium.txt
core/prompts/scenarios/: system_discussion.txt  system_explanation.txt  system_image_analysis.txt  system_media_discussion.txt  system_media_explanation.txt  system_unknown.txt
core/readiness/: checker.py
core/thinking_messages/: __init__.py  thinking_01.txt  thinking_02.txt  thinking_03.txt  thinking_04.txt  thinking_05.txt  thinking_06.txt  thinking_07.txt  thinking_08.txt  thinking_09.txt  thinking_10.txt
core/welcome_messages/: __init__.py  welcome_01.txt  welcome_02.txt  welcome_03.txt  welcome_04.txt  welcome_05.txt  welcome_06.txt  welcome_07.txt  welcome_08.txt  welcome_09.txt  welcome_10.txt  welcome_11.txt  welcome_12.txt
data/: bot.db
doc/: README_diagrams.md  architecture_diagram.md  data_model.md  dialog_flow.md  message_formatting.md  message_processing_flow.md  persistence.md  pipeline_unification.md  product_idea.md  refactoring_plan.md  simple_flow_diagram.md  tasklist.md  tasklist_image_processing.md  tasklist_message_formatting.md  versioning.md  vision.md  vision_image_processing.md  vision_multimedia.md  whisper_implementation.md  workflow.md
scripts/: bump_version.py  health_check.py  test_prompts.py
settings/: config.py
tests/: conftest.py  test_bot_handlers.py  test_bot_handlers_refactored.py  test_bot_handlers_refactored_fixed.py  test_context_analyzer.py  test_context_matcher.py  test_context_processor.py  test_di_container.py  test_dialog_builder.py  test_dialog_building.py  test_educational_templates.py  test_error_handling.py  test_formatting_config.py  test_formatting_pipeline.py  test_image_processor.py  test_llm_client.py  test_math_converter.py  test_media_handlers.py  test_media_processor.py  test_message_processor.py  test_message_processor_fixed.py  test_message_processor_simple.py  test_persistence_simple.py  test_prompt_loader.py  test_prompt_store.py  test_service_registry.py  test_service_registry_new.py  test_session_state.py  test_telegram_formatter_basic.py  test_thinking_messages.py  test_topic_identification.py  test_welcome_messages_updated.py
